# Sdr-Agent

./: .gitignore  PipeIQ_PRD_v2.docx  README.md  package-lock.json  package.json
apps/web/: .env.example  package.json  tailwind.config.js  tsconfig.app.json
apps/web/src/: App.tsx  index.css
apps/web/src/components/: animated-onboarding.tsx  approval-card.tsx  company-profile-panel.tsx  connection-card.tsx  integrations-panel.tsx  launch-control-room.tsx  meetings-panel.tsx  onboarding-panel.tsx  playbooks-panel.tsx  prospects-panel.tsx  replies-panel.tsx  sequence-panel.tsx  warming-panel.tsx
apps/web/src/lib/: api.ts  onboarding.ts
docs/: composio-manual-auth.md
services/agent-api/: .env.example  pyproject.toml
services/agent-api/src/pipeiq_api/: __init__.py  agent_runtime.py  apollo_service.py  composio_service.py  config.py  hunter_service.py  instantly_service.py  integration_service.py  main.py  models.py  store.py
services/api/: .env.example  package.json  trigger.config.ts  tsconfig.json  tsconfig.trigger.json
services/api/src/: index.ts  types.ts
services/api/src/agents/: actions.ts  registry.ts  service.ts  workspace-context.ts
services/api/src/lib/: activity.ts  adaptive.ts  apollo.ts  bandwidth.ts  bounce-classifier.ts  calendar.ts  composio.ts  encryption.ts  env.ts  execution-runs.ts  gmail.ts  hunter.ts  rag.ts  (+11 more)
supabase/: schema.sql
supabase/migrations/: 20260316_schema_sync.sql  20260317_rag_improvements.sql  20260317_sequences.sql  20260318_sequencing_reliability.sql  20260319_deliverability_hardening.sql  20260320_rls_policies.sql
(+26 files in other folders)
