[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeiq-agent-api"
version = "0.1.0"
description = "PipeIQ scaffold API using Composio and OpenAI Agents SDK"
requires-python = ">=3.11"
dependencies = [
  "composio==0.11.3",
  "composio-openai-agents==0.11.3",
  "fastapi==0.135.1",
  "openai-agents==0.12.2",
  "pydantic-settings==2.13.1",
  "python-dotenv==1.2.2",
  "uvicorn[standard]==0.41.0"
]

[tool.setuptools.packages.find]
where = ["src"]
